src/test/resources/test/coco/valid/W1.struct
package test.coco.valid;

struct W1 {
  Z f1;
  Z f2;
  test.coco.valid.K1 f3;
}
