src/test/resources/test/coco/invalid/ModelWithComplexFieldTypes1.struct
package test.coco.invalid;

struct ModelWithComplexFieldTypes1 {
  B f1;
  foo.bar.Baz<Foo1>.InnerStruct1<Foo2>.InnerStruct2<Foo3> f3;
}
